# ofxActiveScan

./: .gitignore  CMakeLists.txt  README.md  addon_config.mk  build-libopenframeworks.sh  procamtools.sln
SharedData/: config.yml
common/: BmpUtil.h  CalcStatistics.h  CameraCalibration.h  ColorConv.h  DLT.h  Field.h  ImageBase.h  ImageBmpIO.h  ImageIOBase.h  IniFile.h  MathBase.h  MathBaseLapack.h  MathBaseUtil.h  MiscUtil.h  Stereo.h
example-calibrate/: CMakeLists.txt
example-calibrate/emptyExample.xcodeproj/: project.pbxproj
example-calibrate/src/: main.cpp  testApp.cpp  testApp.h
example-decode/: CMakeLists.txt  addons.make  decode.cpp  main.cpp  stdafx.h
example-decode/emptyExample.xcodeproj/: project.pbxproj
example-decode/emptyExample.xcodeproj/xcshareddata/xcschemes/: emptyExample Debug.xcscheme  emptyExample Release.xcscheme
example-decode/src/: main.cpp  testApp.cpp  testApp.h
example-encode/emptyExample.xcodeproj/: project.pbxproj
example-encode/src/: main.cpp  testApp.cpp  testApp.h
example-match/emptyExample.xcodeproj/: project.pbxproj
example-match/src/: testApp.cpp  testApp.h
example-pcl/: CMakeLists.txt  Project.xcconfig
example-pcl/example-extract-indices.xcodeproj/: project.pbxproj
example-pcl/example-extract-indices.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
example-pcl/src/: main.cpp  testApp.cpp  testApp.h
example-recalibrate/emptyExample.xcodeproj/: project.pbxproj
example-recalibrate/src/: main.cpp  testApp.cpp  testApp.h
example-stitch/emptyExample.xcodeproj/: project.pbxproj
example-stitch/src/: testApp.cpp  testApp.h
example-triangulate/: stdafx.h
example-triangulate/emptyExample.xcodeproj/: project.pbxproj
example-triangulate/emptyExample.xcodeproj/xcshareddata/xcschemes/: emptyExample Debug.xcscheme
example-triangulate/src/: main.cpp  testApp.cpp  testApp.h
example_calibrate/: example_calibrate.sln  example_calibrate.vcxproj  example_calibrate.vcxproj.filters  ofApp.vcxproj.filters
example_calibrate/example_calibrate.xcodeproj/: project.pbxproj
example_calibrate/example_calibrate.xcodeproj/xcshareddata/xcschemes/: example_calibrate Debug.xcscheme  example_calibrate Release.xcscheme
example_calibrate/src/: testApp.cpp  testApp.h
example_calibrate_kinect/: addons.make  example_calibrate_kinect.sln  example_calibrate_kinect.vcxproj
example_calibrate_kinect/example_calibrate_kinect.xcodeproj/: project.pbxproj
example_calibrate_kinect/example_calibrate_kinect.xcodeproj/xcshareddata/xcschemes/: example_calibrate_kinect Debug.xcscheme  example_calibrate_kinect Release.xcscheme
example_calibrate_kinect/src/: ofApp.cpp  ofApp.h
example_decode/: ofApp.vcxproj
example_decode/example_decode.xcodeproj/: project.pbxproj
example_decode/example_decode.xcodeproj/xcshareddata/xcschemes/: example_decode Debug.xcscheme  example_decode Release.xcscheme
example_encode/: addons.make  example_encode.sln  example_encode.vcxproj  ofApp.sln
example_encode/example_encode.xcodeproj/: project.pbxproj
example_encode/example_encode.xcodeproj/xcshareddata/xcschemes/: example_encode Debug.xcscheme  example_encode Release.xcscheme
example_encode/src/: testApp.cpp  testApp.h
example_encode_kinect/: addons.make  example_encode_kinect.sln  example_encode_kinect.vcxproj  example_encode_kinect.vcxproj.filters
example_encode_kinect/example_encode_kinect.xcodeproj/: project.pbxproj
example_encode_kinect/example_encode_kinect.xcodeproj/xcshareddata/xcschemes/: example_encode_kinect Debug.xcscheme  example_encode_kinect Release.xcscheme
example_encode_kinect/src/: main.cpp  ofApp.cpp  ofApp.h
example_mapping_kinect/: addons.make  example_mapping_kinect.sln  example_mapping_kinect.vcxproj
example_mapping_kinect/example_mapping_kinect.xcodeproj/: project.pbxproj
example_mapping_kinect/example_mapping_kinect.xcodeproj/xcshareddata/xcschemes/: example_mapping_kinect Debug.xcscheme  example_mapping_kinect Release.xcscheme
example_mapping_kinect/src/: ofApp.cpp  ofApp.h
example_triangulate/: example_triangulate.sln  example_triangulate.vcxproj
example_triangulate/example_triangulate.xcodeproj/: project.pbxproj
example_triangulate/example_triangulate.xcodeproj/xcshareddata/xcschemes/: example_triangulate Debug.xcscheme  example_triangulate Release.xcscheme
example_triangulate/src/: testApp.cpp
levmar/: Axb_core.c  Makefile.vc  expfit.c  levmar.vcproj  lm.c  lm.h  lmbc_core.c  lmblec_core.c  lmdemo.vcproj  lmlec.c  misc.c  misc.h
libs/ProCamTools/include/: FundamentalMatrix.h  GrayCode.h  calibrate.h  decode.h  encode.h  levmar_util.h  ransac.h  triangulate.h
libs/ProCamTools/include/common/: CameraCalibration.h  DLT.h  Field.h  ImageIOBase.h  IniFile.h  MathBase.h  MathBaseLapack.h  MiscUtil.h  Stereo.h
libs/ProCamTools/lib/: FundamentalMatrix.cpp  triangulate.cpp
libs/lapack/include/: lapacke.h
libs/levmar/lib/vs/: liblevmar.lib
mkl/: mkl_c_dll.lib  mkl_lapack.h  mkl_lapack32.h  mkl_lapack64.h  mkl_types.h  mkllic.htm  redist.txt
myData/: config.yml
source/: FundamentalMatrix.cpp  FundamentalMatrix.h  GrayCode.h  Options.h  Rotation.h  ransac.h
source/calibrate/: Makefile  calibrate.h  calibrate.vcproj  stdafx.h
source/decode/: Makefile  decode.cpp  decode.h  decode.vcproj  main.cpp
source/encode/: Makefile  encode.h  encode.vcproj  main.cpp  stdafx.cpp
source/triangulate/: Makefile  stdafx.cpp  triangulate.cpp  triangulate.vcproj
src/: ofxActiveScan.cpp  ofxActiveScan.h  ofxActiveScanTransform.cpp  ofxActiveScanTransform.h  ofxActiveScanTypes.h  ofxActiveScanUtils.cpp  ofxActiveScanUtils.h
src/ProCamTools/: FundamentalMatrix.cpp  FundamentalMatrix.h  calibrate.h  decode.cpp  encode.h  ransac.h  stdafx.h  triangulate.h
src/ProCamTools/common/: BmpUtil.h  CalcStatistics.h  LeastSquare.h  MathBase.h  MathBaseLapack.h
src/levmar/: Axb.c  compiler.h  levmar_util.h  lm_core.c  lmbc.c  lmblec.c  lmbleic.c  lmbleic_core.c  lmdemo.c  lmlec_core.c  misc_core.c
